# semantically-open-data-backend

./: .env.example  .gitignore  2026_01_24_23_37.json  2026_01_25_00_38_157e2b8c.xlsx  PARAMETERS_GUIDE.md  TESTING_GUIDE.md  docker-compose.yml  pyproject.toml
src/: main.py
src/datasets/: base_data_downloader.py  berlin.py  bootstrap.py  chemnitz.py  datasets-fields-analysis_after_text_filters.csv  datasets_analysis.py  datasets_fields_analysis.csv  datasets_fields_analysis_report.txt  datasets_metadata.py  dresden.py  field_analysis_report.txt  leipzig.py  truncate_long_names.py
src/datasets_api/: datasets_controller.py  datasets_dto.py  embeddings_controller.py  router.py
src/domain/repositories/: dataset_repository.py
src/domain/services/: dataset_service.py  llm_dto.py  llm_service.py  mongo_indexer.py
src/infrastructure/: config.py
src/scripts/: __init__.py  run_benchmark.py
src/testing/: testing_controller.py  testing_dto.py  testing_service.py
src/utils/: datasets_utils.py  file.py
src/vector_search/: embedder.py  reranker.py  vector_db.py  vector_db_buffer.py
test_data/: candidates.json  questions.json
test_data/reports/: 2025_12_26_01_36.json  2025_12_26_01_46.json  343654da-5e5f-465d-89a4-dd781f23745a.json  50187b9e-4294-4516-8b34-1d424b85b778.json  59185312-93e8-474a-82d0-9bfbb395a151.json
