[project]
name = "semantic-open-data"
version = "0.1.0"
description = "Semantic Open Data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "dcat-ap-plus>=0.1.0rc3",
    "einops>=0.8.1",
    "fastapi>=0.116.0",
    "httpx>=0.27.0",
    "fitter>=1.6.0",
    "motor>=3.7.1",
    "openpyxl>=3.1.0",
    "pandas>=2.3.0",
    "pandas-stubs~=2.3.1",
    "peft>=0.16.0",
    "playwright>=1.53.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.14.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scipy-stubs~=1.16.1",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "xlrd>=2.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "taskipy>=1.14.1",
    "mongomock>=4.3.0",
    "mongomock-motor>=0.0.36",
]

[tool.taskipy.tasks]
dev = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"
start = "uvicorn src.main:app --host 0.0.0.0 --port 8000"
test = "pytest"
lint = "ruff check src/"
format = "ruff format src/"
